--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,33 @@
 name: pro_image_editor
 description: "A Flutter image editor: Seamlessly enhance your images with user-friendly editing features."
 version: 1.0.0
-homepage: https://github.com/hm21/pro_image_editor
+homepage: https://github.com/hm21/pro_image_editor/
+repository: https://github.com/hm21/pro_image_editor/
+issue_tracker: https://github.com/hm21/pro_image_editor/issues/
+documentation: https://github.com/hm21/pro_image_editor/
+
+
+topics:
+  - image-editor
+  - image
+  - widget
+  - editor
+  - pro-image-editor
+  - painting
+  - crop
+  - filter
+
+screenshots:
+  - description: "Showcase"
+    path: assets/showcase.png
+
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  web:
+  windows:
 
 environment:
   sdk: '>=3.2.2 <4.0.0'
@@ -13,7 +39,7 @@ dependencies:
 
   image_editor: ^1.3.0
   extended_image: ^8.2.0
-  rounded_background_text: ^0.4.3
+  rounded_background_text: ^0.5.0
   colorfilter_generator: ^0.0.8
   screenshot: ^2.1.0
   vibration: ^1.8.4
