Update README, format Dart code, add docs, and introduce pub.dev publish workflow
- Updated images in README.md for enhanced clarity
- Formatted Dart code across various modules for improved consistency
- Added documentation to adaptive_dialog.dart for better code understanding
- Introduced a new GitHub workflow (publish.yml) for automating publishing to pub.dev

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,10 @@ topics:
   - image
   - widget
   - editor
-  - pro-image-editor
   - painting
-  - crop
-  - filter
 
 screenshots:
-  - description: "Showcase"
+  - description: "Showcase from the Image Editor"
     path: assets/showcase.png
 
 platforms:
