Implement initial crop corner functionality and mouse scroll support
- Removed unused .flutter-plugins and .flutter-plugins-dependencies files
- Updated .gitignore
- Modified main.dart, crop_rotate_editor.dart, pro_image_editor_main.dart, and layer_widget.dart for crop corner and scroll integration
- Added crop_corner_painter.dart for handling crop corner visuals

--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,8 @@ migrate_working_dir/
 /pubspec.lock
 **/doc/api/
 .dart_tool/
+.flutter-plugins-dependencies
+/example/.flutter-plugins-dependencies
+.flutter-plugins
+/example/.flutter-plugins
 build/
