docs: update CHANGELOG for v2.2.3 and clean up configuration files
- Updated the CHANGELOG.md to reflect the changes in version 2.2.3.
- Removed the example/pubspec.lock file to avoid locking into specific package versions.

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,8 @@ migrate_working_dir/
 **/doc/api/
 .dart_tool/
 .flutter-plugins-dependencies
-/example/.flutter-plugins-dependencies
 .flutter-plugins
 /example/.flutter-plugins
+/example/.flutter-plugins-dependencies
+/example/pubspec.lock
 build/
