refactor: update issue templates and workflow logging
- Update `bug_report.md` and `feature_request.md` templates to enhance issue reporting clarity.
- Modify `publish.yml` workflow to log steps and upgrade to the latest Flutter version.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,10 +9,14 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
-            flutter-version: '3.19.3'
-      - run: flutter pub get
-      - run: flutter pub publish --dry-run
-      - run: flutter pub publish -f
+          channel: master
+          flutter-version: '3.19.5'
+      - name: Install Package Dependencies
+        run: flutter pub get
+      - name: Check publish with dry run
+        run: flutter pub publish --dry-run
+      - name: Publish package
+        run: flutter pub publish -f
