--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -25,15 +25,15 @@ if (flutterVersionName == null) {
 android {
     namespace "com.example.example"
     compileSdkVersion 34
-    ndkVersion flutter.ndkVersion
+    ndkVersion "26.2.11394342"
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     sourceSets {
