--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,5 @@ migrate_working_dir/
 /example/.flutter-plugins
 /example/.flutter-plugins-dependencies
 /example/pubspec.lock
+/example/macos/flutter/GeneratedPluginRegistrant.swift
 build/
