chore: upgrade to Flutter 3.22.0
Update GitHub workflow files and various Dart modules to be compatible with Flutter 3.22.0. This ensures our project stays up-to-date with the latest Flutter features and improvements.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: master
-          flutter-version: '3.19.5'
+          flutter-version: 3.22.0
       - name: Install Package Dependencies
         run: flutter pub get
       - name: Format dart code
