--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,12 +16,18 @@ dependencies:
   cupertino_icons: ^1.0.2
   file_picker: ^8.0.0+1
   google_fonts: ^6.2.0
+  image: ^4.1.7
+  flutter_image_compress: ^2.3.0
+  firebase_core: ^2.31.0
+  firebase_storage: ^11.7.5
+  supabase_flutter: ^2.5.3
+  image_picker: ^1.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.2 
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
