--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: pro_image_editor
 description: "A Flutter image editor: Seamlessly enhance your images with user-friendly editing features."
-version: 3.0.0-dev.3
+version: 3.0.0-dev.4
 homepage: https://github.com/hm21/pro_image_editor/
 repository: https://github.com/hm21/pro_image_editor/
 issue_tracker: https://github.com/hm21/pro_image_editor/issues/
@@ -40,6 +40,7 @@ dependencies:
   defer_pointer: ^0.0.2
   emoji_picker_flutter: ^2.2.0
   http: ^1.2.1
+  image: ^4.1.7
   rounded_background_text: ^0.5.0
   vibration: ^1.8.4
 
