--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: pro_image_editor
 description: "A Flutter image editor: Seamlessly enhance your images with user-friendly editing features."
-version: 3.0.0-dev.5
+version: 3.0.0-dev.6
 homepage: https://github.com/hm21/pro_image_editor/
 repository: https://github.com/hm21/pro_image_editor/
 issue_tracker: https://github.com/hm21/pro_image_editor/issues/
@@ -55,6 +55,8 @@ dev_dependencies:
   network_image_mock: ^2.0.0
 
 flutter:
+  assets:
+    - lib/web/
   fonts:
    - family: ProImageEditorIcons
      fonts:
