fix(question-template): resolve bug in question.yml

--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -1,5 +1,5 @@
 name: Question
-description: Please use the [discuss](https://github.com/hm21/pro_image_editor/discussions) tab to ask a question.
+description: Please use the discuss tab to ask a question.
 title: "[Question] "
 labels: ["question"]
 body:
@@ -12,6 +12,5 @@ body:
     attributes:
       label: Placeholder
       description: "Placeholder"
-      placeholder: ""
     validations:
       required: false
