--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ migrate_working_dir/
 /example/.flutter-plugins-dependencies
 /example/pubspec.lock
 build/
+
+# Ignoring all of the Cocoapods files in the example app.
+Podfile
+Podfile.*
