perf(image-generation): optimize image generation algorithm and improve isolate logic
- Enhanced image generation algorithm for better performance
- Improved isolate logic to ensure efficient processing
- Updated various example pages and utils with the new enhancements
- Renamed and restructured image generation configs for better organization
- Added new config files for output formats and processor configurations
- Updated localization files for blur, filter, and painting editors
- Improved various modules such as blur editor, crop/rotate editor, filter editor, and paint editor
- Made significant updates to content recorder utilities, including new encoding and conversion methods
- Removed obsolete utils and added new optimized ones

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_storage: ^11.7.5
   supabase_flutter: ^2.5.3
   image_picker: ^1.1.1
+  mime: ^1.0.5
 
 dev_dependencies:
   flutter_test:
