--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,10 +13,12 @@ dependencies:
 
   pro_image_editor:
     path: ../
+    
+  intl: ^0.19.0
   cupertino_icons: ^1.0.2
   file_picker: ^8.0.0+1
   google_fonts: ^6.2.0
-  image: ^4.1.7
+  image: ^4.2.0
   flutter_image_compress: ^2.3.0
   firebase_core: ^2.31.0
   firebase_storage: ^11.7.5
