chore(release): add .pubignore and reorganize assets for pub.dev
- Add .pubignore file to ensure only necessary files are released to pub.dev.
- Move preview images to a dedicated folder to streamline important asset uploads.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,9 @@ topics:
 
 screenshots:
   - description: "Showcase from the image editor with the Whatsapp design"
-    path: assets/showcase-whatsapp.png
+    path: assets/showcase-whatsapp.jpg
   - description: "Showcase from the image editor with simple design"
-    path: assets/showcase.png
+    path: assets/showcase.jpg
 
 platforms:
   android:
