fix(web_worker): remove web_worker.dart from web build to resolve lint errors
Fixes issue #71

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,9 @@ dev_dependencies:
 
 flutter:
   assets:
-    - lib/web/
+    - lib/web/web_worker.dart.js
+    - lib/web/web_worker.dart.js.deps
+    - lib/web/web_worker.dart.js.map
   fonts:
    - family: ProImageEditorIcons
      fonts:
