--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,7 @@ jobs:
           sh ./pub_login.sh
 
       - name: Check Publish Warnings
-        run: pub publish --dry-run
-        
+        run: dart pub publish --dry-run
+
       - name: Publish Package
-        run: pub publish -f
+        run: dart pub publish -f
