--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: pro_image_editor
 description: "A Flutter image editor: Seamlessly enhance your images with user-friendly editing features."
-version: 3.0.15
+version: 4.0.0
 homepage: https://github.com/hm21/pro_image_editor/
 repository: https://github.com/hm21/pro_image_editor/
 issue_tracker: https://github.com/hm21/pro_image_editor/issues/
@@ -15,6 +15,8 @@ topics:
   - painting
 
 screenshots:
+  - description: "Showcase from the image editor with the frosted-glass design"
+    path: assets/showcase-frosted-glass.jpg
   - description: "Showcase from the image editor with the Whatsapp design"
     path: assets/showcase-whatsapp.jpg
   - description: "Showcase from the image editor with simple design"
