--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: pro_image_editor
 description: "A Flutter image editor: Seamlessly enhance your images with user-friendly editing features."
-version: 5.1.0
+version: 5.1.1
 homepage: https://github.com/hm21/pro_image_editor/
 repository: https://github.com/hm21/pro_image_editor/
 issue_tracker: https://github.com/hm21/pro_image_editor/issues/
@@ -10,8 +10,9 @@ documentation: https://github.com/hm21/pro_image_editor/
 topics:
   - image-editor
   - image
+  - photo
+  - picture
   - editor
-  - widget
   - painting
 
 screenshots:
