--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,8 +19,8 @@ dependencies:
   file_picker: ^8.0.0+1
   google_fonts: ^6.2.0
   image: ^4.2.0
-  firebase_core: ^2.32.0
-  firebase_storage: ^11.7.7
+  firebase_core: ^3.3.0
+  firebase_storage: ^12.1.3
   supabase_flutter: ^2.5.3
   image_picker: ^1.1.1
   mime: ^1.0.5
@@ -32,6 +32,10 @@ dev_dependencies:
 
   flutter_lints: ^4.0.0
   import_sorter: ^4.6.0
+  
+dependency_overrides: 
+  # Fix conflict between firebase and web package
+  web: ^1.0.0
 
 flutter:
   uses-material-design: true
