feat(design): introduce new "Grounded" design theme
- Added "Grounded" design theme with various components and utilities
- Added new assets: preview GIF and image
- Introduced several new UI elements: bars, editors, sliders, etc., as part of the Grounded design
- Updated editor configurations and theme-related models for Grounded integration

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   image_picker: ^1.1.1
   mime: ^1.0.5
   url_launcher: ^6.2.6
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
