--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,13 @@ platforms:
 
 environment:
   sdk: '>=3.2.2 <4.0.0'
-  flutter: ">=1.17.0"
+  flutter: ">=3.24.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  emoji_picker_flutter: ^3.1.0
+  emoji_picker_flutter: ">=3.1.0 <3.2.0"
   http: ^1.2.2
   image: ^4.2.0
   vibration: ^2.0.0
