feat(Tune-Editor): add new Tune Editor for image adjustments
- Introduced the new "Tune" editor, allowing users to adjust image contrast, saturation, and brightness.
- Added new configurations, callbacks, and adjustment items related to the Tune Editor.
- Updated design examples to include Tune Editor functionality.
- Modified various modules and mixins to integrate the new editor.
- Added new i18n support, icons, and theme settings for the Tune Editor.
- Included unit tests for the new Tune Editor.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,8 @@
         "unawaited",
         "uvac",
         "uvdc"
-    ]
+    ],
+    "diffEditor.experimental.showEmptyDecorations": true,
+    "diffEditor.hideUnchangedRegions.enabled": false,
+    "editor.minimap.showMarkSectionHeaders": true
 }
