feat(lint): update flutter lint to v5.0.0 and fix lint issues in example
- Updated `analysis_options.yaml` to use Flutter lint version 5.0.0.
- Fixed all linting issues in the `example` directory.
- Modified various Dart files to adhere to updated linting rules.

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,7 @@ analyzer:
 
 linter:
   rules:
+    - unnecessary_library_name
     - public_member_api_docs
     - annotate_overrides
     - avoid_empty_else
