--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,27 +16,27 @@ dependencies:
     
   intl: ^0.19.0
   cupertino_icons: ^1.0.2
-  file_picker: ^8.0.0+1
+  file_picker: ^8.1.3
   google_fonts: ^6.2.0
-  image: ^4.2.0
-  firebase_core: ^3.3.0
-  firebase_storage: ^12.1.3
-  supabase_flutter: ^2.5.3
+  image: ^4.3.0
+  firebase_core: ^3.6.0
+  firebase_storage: ^12.3.4
+  supabase_flutter: ^2.8.0
   image_picker: ^1.1.1
-  mime: ^1.0.5
-  url_launcher: ^6.2.6
+  mime: ^2.0.0
+  url_launcher: ^6.3.1
   flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   import_sorter: ^4.6.0
   
 dependency_overrides: 
-  # Fix conflict between firebase and web package
-  web: ^1.0.0
+  # Fix conflict with supabase
+  mime: ^2.0.0
 
 flutter:
   uses-material-design: true
